--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -304,7 +304,8 @@ header
 #Experience_area
   background #353535
   color #fff
-
+.pd-skill
+  padding 0px 15px 0px 0px
 .skills
   h2
     margin-bottom 40px
