--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -229,9 +229,13 @@ header
 
 .container-portfolio
   width 100%
+.box-portfolio
+  padding 40px
+  border 1px solid #F6F6F6
 
 .portfolio_img
   width 100%
+  height 205px
 
 #portfolio_area
   background #fff
@@ -263,16 +267,19 @@ header
     border 2px solid #E3E3E3
     padding 20px 40px
   h3
-    position absolute
-    width 100%
-    height auto
-    top 197px
+    color #FF7260
     text-align center
-    font-size 24px
-    color #fff
-    line-height 160px
-    background transparent
-    text-shadow 0 1px 4px rgba(0, 0, 0, 0.51)
+    padding 10px 0
+    /*position absolute*/
+    /*width 100%*/
+    /*height auto*/
+    /*top 197px*/
+    /*text-align center*/
+    /*font-size 24px*/
+    /*color #fff*/
+    /*line-height 160px*/
+    /*background transparent*/
+    /*text-shadow 0 1px 4px rgba(0, 0, 0, 0.51)*/
 
 #clients_area
   .title
