--- a/app/css/main.css
+++ b/app/css/main.css
@@ -218,8 +218,13 @@ header transition height 0.3s header.smaller nav a {
 .container-portfolio {
   width: 100%;
 }
+.box-portfolio {
+  padding: 40px;
+  border: 1px solid #f6f6f6;
+}
 .portfolio_img {
   width: 100%;
+  height: 205px;
 }
 #portfolio_area {
   background: #fff;
@@ -258,16 +263,19 @@ header transition height 0.3s header.smaller nav a {
   padding: 20px 40px;
 }
 .portfolio_content h3 {
-  position: absolute;
-  width: 100%;
-  height: auto;
-  top: 197px;
+  color: #ff7260;
   text-align: center;
-  font-size: 24px;
-  color: #fff;
-  line-height: 160px;
-  background: transparent;
-  text-shadow: 0 1px 4px rgba(0,0,0,0.51);
+  padding: 10px 0;
+/*position absolute*/
+/*width 100%*/
+/*height auto*/
+/*top 197px*/
+/*text-align center*/
+/*font-size 24px*/
+/*color #fff*/
+/*line-height 160px*/
+/*background transparent*/
+/*text-shadow 0 1px 4px rgba(0, 0, 0, 0.51)*/
 }
 #clients_area .title {
   color: #949494;
