--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -235,7 +235,6 @@ header
 
 .portfolio_img
   width 100%
-  height 205px
 
 #portfolio_area
   background #fff
@@ -256,9 +255,8 @@ header
   h3
     font-size 18px
     padding-top 15px
-    color #6b6b6b
+    color #FF7260
     text-align center
-    border 1px solid #f5f5f5
     padding-bottom 25px
 .portfolio_content
   position relative
@@ -269,7 +267,7 @@ header
   h3
     color #FF7260
     text-align center
-    padding 10px 0
+    padding 20px 0px 0px 0px
     /*position absolute*/
     /*width 100%*/
     /*height auto*/
