--- a/app/css/main.css
+++ b/app/css/main.css
@@ -224,7 +224,6 @@ header transition height 0.3s header.smaller nav a {
 }
 .portfolio_img {
   width: 100%;
-  height: 205px;
 }
 #portfolio_area {
   background: #fff;
@@ -249,9 +248,8 @@ header transition height 0.3s header.smaller nav a {
 .portfolio_page h3 {
   font-size: 18px;
   padding-top: 15px;
-  color: #6b6b6b;
+  color: #ff7260;
   text-align: center;
-  border: 1px solid #f5f5f5;
   padding-bottom: 25px;
 }
 .portfolio_content {
@@ -265,7 +263,7 @@ header transition height 0.3s header.smaller nav a {
 .portfolio_content h3 {
   color: #ff7260;
   text-align: center;
-  padding: 10px 0;
+  padding: 20px 0px 0px 0px;
 /*position absolute*/
 /*width 100%*/
 /*height auto*/
