Cambio de colores a los titulos

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -255,7 +255,7 @@ header
   h3
     font-size 18px
     padding-top 15px
-    color #FF7260
+    color #5E5E65
     text-align center
     padding-bottom 25px
 .portfolio_content
@@ -265,7 +265,7 @@ header
     border 2px solid #E3E3E3
     padding 20px 40px
   h3
-    color #FF7260
+    color #5E5E65
     text-align center
     padding 20px 0px 0px 0px
     /*position absolute*/
