--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -12,7 +12,7 @@
                     <div class="col-sm-4" ng-repeat="project in project.list.results">
                         <div class="portfolio_page wow slideInUp" data-wow-duration="2s">
                             <a title="Leer más" post-link="{ link: {url: project.link, target: '_blank'} }" ui-sref="project_detail({slug: project.slug})">
-                                <img class="portfolio_img" ng-src="{{ project.featuredImage }}">
+                                <img class="portfolio_img" post-image="{url:project.urlImg}">
                                 <h3>{{ project.title }}</h3>
                             </a>
                         </div>
