--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 content-pages">
-                <div class="container">
+                <div class="container" infinite-scroll='post.getMorePosts()' infinite-scroll-disabled='post.busy || !post.next'>
                     <div class="col-md-6 col-sm-6 col-xs-6">
                         <div class="single_blog wow slideInUp" data-wow-duration="1s">
                             <a title="Leer más" post-link="{ link: {url: post.link, target: '_blank'} }"
@@ -26,7 +26,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-sm-6 col-xs-6" ng-repeat="post in post.list.results" ng-if="$index >= 1">
+                    <div class="col-sm-3 col-sm-6 col-xs-6" ng-repeat="post in post.list" ng-if="$index >= 1">
                         <div class="single_blog wow slideInUp" data-wow-duration="1s">
                             <a title="Leer más" post-link="{ link: {url: post.link, target: '_blank'} }"
                                ui-sref="post_detail({slug: post.slug})">
