--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -45,6 +45,14 @@
                             </a>
                         </div>
                     </div>
+                    <div class="col-sm-12" ng-show="post.busy">
+                        <h3 class="text-center">Cargando <i class="fa fa-spinner fa-spin"></i></h3>
+                    </div>
+
+                    <div class="col-sm-12" ng-show="!post.busy">
+                        <h2 class="text-center" ng-show="!post.list.length">Lo sentimos no contamos con contenido
+                        disponible</h2>
+                    </div>
                 </div>
                 <!--post list -->
             </div>
