--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -11,6 +11,9 @@
                 <div class="container">
                     <!--content here-->
                     <div ng-bind-html="page.detail.content"></div>
+                    <div class="col-sm-12" ng-show="page.busy">
+                        <h3 class="text-center">Cargando <i class="fa fa-spinner fa-spin"></i></h3>
+                    </div>
                 </div>
             </div>
         </div>
