--- a/app/templates/single.html
+++ b/app/templates/single.html
@@ -10,6 +10,9 @@
             <div class="col-md-12 content-pages">
                 <div class="container">
                     <div ng-bind-html="post.detail.content"></div>
+                    <div class="col-sm-12" ng-show="post.busy">
+                        <h3 class="text-center">Cargando <i class="fa fa-spinner fa-spin"></i></h3>
+                    </div>
                 </div>
             </div>
         </div>
