Add enhanced in meta tags and service contact

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -10,7 +10,7 @@
                         en el mundo digital </p>
                     <a class="btn-green wow slideInUp" data-wow-duration="3s" ui-sref="contact">Hablanos de tu
                         proyecto</a><br/>
-                    <a href="#portfolio_area" class="wow bounceInUp scrollme" title="Más información"> <i
+                    <a href="#portfolio_area" du-smooth-scroll duration="1500" class="wow bounceInUp scrollme" title="Más información"> <i
                             class="fa fa-angle-down fa-4x"></i></a>
                 </div>
             </div>
