--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -55,77 +55,51 @@ p
   font-weight 400
   font-size 14px
 
+body
+  font-family 'Roboto', sans-serif !important
+
 /************** main css ******************/
-
-header.smaller
-  height 85px
-  box-shadow 0 0 10px #999
-  .mainmenu
-    padding-top 0px
-
 header
-  width 100%
-  height 100px
-  overflow hidden
-  position fixed
-  top 0
-  left 0
-  z-index 999
-  background-color #EBEBEB
-  -webkit-transition height 0.3s
-  -moz-transition height 0.3s
-  -ms-transition height 0.3s
-  -o-transition height 0.3s
-  transition height 0.3s
-
-    header.smaller h1#logo
-      width 150px
-      height 75px
-      line-height: 75px
-      font-size 30px
-
-    header.smaller nav a
-      line-height 75px
-
-
-.header
-  .mainmenu
-    padding-top 10px
-    position absolute
-    background transparent
-    /*padding 25px 0 0*/
-    top 0px
-    left 0
-    right 0
-    z-index 99999
-
+  .navbar-default
+    background #f5f5f5
+    height 100px
+    border none
+    border-radius 0
+    -webkit-box-shadow 0 0 15px rgba(0, 0, 0, 0.43)
+    -moz-box-shadow 0 0 15px rgba(0, 0, 0, 0.43)
+    box-shadow 0 0 15px rgba(0, 0, 0, 0.43)
+    .navbar-nav > li > a
+      padding 40px 18px
+    .navbar-nav > li > a:hover, .navbar-nav > li > a:focus
+      background-color #eeedec
     .main-nav
-      padding-top 15px
+      border-left 1px solid #ccc
+    .main-nav > li > a
+      padding 32px 18px
+      color #e50983
+    .main-nav > li > a:hover, .main-nav > li > a:focus
+      background-color transparent
+      color #e50983
+    .navbar-nav
+      .dropdown:hover .dropdown-toggle
+        background-color #eeedec
+        color #e50983
+      .dropdown
+        .dropdown-menu
+          background-color #eeedec
+          border none
+        .dropdown-menu >  li > a
+          color #8e8e8e
+          font-size 16px
+          padding 10px 15px
+        .dropdown-menu >  li > a:hover
+          background transparent
+          color #e50983
 
-    .navbar-brand
-      float left
-      height auto
+  .logo
+    width 150px
 
-    .navbar-toggle
-      position relative
-      float right
-      padding 9px 10px
-      margin-top 8px
-      margin-right 15px
-      margin-bottom 8px
-      background-color #4ECB8C
-      background-image none
-      border 1px solid transparent
-      border-radius 4px
-
-    .icon-bar
-      display block
-      width 22px
-      height 2px
-      border-radius 1px
-      background #fff
-
-/************** header css ******************/
+/********************************/
 
 #slider-area
   background url(../img/bg.jpg)
