--- a/app/css/main.css
+++ b/app/css/main.css
@@ -53,71 +53,56 @@ p {
   font-weight: 400;
   font-size: 14px;
 }
-header.smaller {
-  height: 85px;
-  box-shadow: 0 0 10px #999;
+body {
+  font-family: 'Roboto', sans-serif !important;
 }
-header.smaller .mainmenu {
-  padding-top: 0px;
-}
-header {
-  width: 100%;
+header .navbar-default {
+  background: #f5f5f5;
   height: 100px;
-  overflow: hidden;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 999;
-  background-color: #ebebeb;
-  -webkit-transition: height 0.3s;
-  -moz-transition: height 0.3s;
-  -ms-transition: height 0.3s;
-  -o-transition: height 0.3s;
+  border: none;
+  border-radius: 0;
+  -webkit-box-shadow: 0 0 15px rgba(0,0,0,0.43);
+  -moz-box-shadow: 0 0 15px rgba(0,0,0,0.43);
+  box-shadow: 0 0 15px rgba(0,0,0,0.43);
 }
-header transition height 0.3s header.smaller h1#logo {
-  width: 150px;
-  height: 75px;
-  line-height: 75px;
-  font-size: 30px;
+header .navbar-default .navbar-nav > li > a {
+  padding: 40px 18px;
 }
-header transition height 0.3s header.smaller nav a {
-  line-height: 75px;
+header .navbar-default .navbar-nav > li > a:hover,
+header .navbar-default .navbar-nav > li > a:focus {
+  background-color: #eeedec;
 }
-.header .mainmenu {
-  padding-top: 10px;
-  position: absolute;
+header .navbar-default .main-nav {
+  border-left: 1px solid #ccc;
+}
+header .navbar-default .main-nav > li > a {
+  padding: 32px 18px;
+  color: #e50983;
+}
+header .navbar-default .main-nav > li > a:hover,
+header .navbar-default .main-nav > li > a:focus {
+  background-color: transparent;
+  color: #e50983;
+}
+header .navbar-default .navbar-nav .dropdown:hover .dropdown-toggle {
+  background-color: #eeedec;
+  color: #e50983;
+}
+header .navbar-default .navbar-nav .dropdown .dropdown-menu {
+  background-color: #eeedec;
+  border: none;
+}
+header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a {
+  color: #8e8e8e;
+  font-size: 16px;
+  padding: 10px 15px;
+}
+header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a:hover {
   background: transparent;
-/*padding 25px 0 0*/
-  top: 0px;
-  left: 0;
-  right: 0;
-  z-index: 99999;
+  color: #e50983;
 }
-.header .mainmenu .main-nav {
-  padding-top: 15px;
-}
-.header .mainmenu .navbar-brand {
-  float: left;
-  height: auto;
-}
-.header .mainmenu .navbar-toggle {
-  position: relative;
-  float: right;
-  padding: 9px 10px;
-  margin-top: 8px;
-  margin-right: 15px;
-  margin-bottom: 8px;
-  background-color: #4ecb8c;
-  background-image: none;
-  border: 1px solid transparent;
-  border-radius: 4px;
-}
-.header .mainmenu .icon-bar {
-  display: block;
-  width: 22px;
-  height: 2px;
-  border-radius: 1px;
-  background: #fff;
+header .logo {
+  width: 150px;
 }
 #slider-area {
   background: url("../img/bg.jpg");
