--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -58,6 +58,9 @@ p
 body
   font-family 'Roboto', sans-serif !important
 
+.white
+  color white !important
+
 /************** main css ******************/
 header
   .navbar-default
@@ -69,6 +72,7 @@ header
     -moz-box-shadow 0 0 15px rgba(0, 0, 0, 0.43)
     box-shadow 0 0 15px rgba(0, 0, 0, 0.43)
     margin-bottom 0
+    z-index 9999
     .navbar-nav > li > a
       padding 40px 18px
     .navbar-nav > li > a:hover, .navbar-nav > li > a:focus
@@ -178,70 +182,7 @@ header
   h2
     font-size 45px
     color #555
-
-/************** feature area css ******************/
-
-#features_area
-  h2
-    color: #555;
-    margin-bottom: 60px;
-
-.single_feature
-  padding: 15px;
-  h3
-    margin-top 35px
-    color: #555
-
-  i
-    font-size 50px
-    padding 20px
-    color #555
-
-.single_feature h3
-  margin-top 35px
-  color: #555
-
-.single_feature i
-  font-size 50px
-  padding 20px
-  color #555
-
-/************** story area css ******************/
-
-#story_area
-  background #E9EBEA
-
-.story_text
-  h2, .story_text h2
-    margin-bottom 40px
-
-.story_text h2,
-.experience h2
-  margin-bottom 40px
-
-.story_text p,
-.experience p
-  margin-bottom 30px
-
-.story_text
-  a
-    border 2px solid #333333
-    border-radius 5px
-    display inline-block
-    padding 10px 20px
-    color #000
-    margin-top 20px
-    text-transform uppercase
-
-.experience
-  a
-    border 2px solid #fff
-    border-radius 5px
-    display inline-block
-    padding 10px 20px
-    color #555
-    margin-top 20px
-    text-transform uppercase
+    
 
 /************** content area default ****************/
 #content-area
@@ -255,7 +196,18 @@ header
     border: 1px solid #f5f5f5;
   .content-pages
     padding 20px 0
+    
+/************** Home area css ******************/
 
+#section-sports
+  background #172031
+  text-align center
+  h3
+    color white
+    margin-bottom 45px
+  h4
+    margin-top 15px
+    color white
 /************** footer area css ******************/
 
 #footer_area
