--- a/app/css/main.css
+++ b/app/css/main.css
@@ -56,6 +56,9 @@ p {
 body {
   font-family: 'Roboto', sans-serif !important;
 }
+.white {
+  color: #fff !important;
+}
 header .navbar-default {
   background: #f5f5f5;
   height: 100px;
@@ -65,6 +68,7 @@ header .navbar-default {
   -moz-box-shadow: 0 0 15px rgba(0,0,0,0.43);
   box-shadow: 0 0 15px rgba(0,0,0,0.43);
   margin-bottom: 0;
+  z-index: 9999;
 }
 header .navbar-default .navbar-nav > li > a {
   padding: 40px 18px;
@@ -191,64 +195,6 @@ header .logo {
   font-size: 45px;
   color: #555;
 }
-#features_area h2 {
-  color: #555;
-  margin-bottom: 60px;
-}
-.single_feature {
-  padding: 15px;
-}
-.single_feature h3 {
-  margin-top: 35px;
-  color: #555;
-}
-.single_feature i {
-  font-size: 50px;
-  padding: 20px;
-  color: #555;
-}
-.single_feature h3 {
-  margin-top: 35px;
-  color: #555;
-}
-.single_feature i {
-  font-size: 50px;
-  padding: 20px;
-  color: #555;
-}
-#story_area {
-  background: #e9ebea;
-}
-.story_text h2,
-.story_text .story_text h2 {
-  margin-bottom: 40px;
-}
-.story_text h2,
-.experience h2 {
-  margin-bottom: 40px;
-}
-.story_text p,
-.experience p {
-  margin-bottom: 30px;
-}
-.story_text a {
-  border: 2px solid #333;
-  border-radius: 5px;
-  display: inline-block;
-  padding: 10px 20px;
-  color: #000;
-  margin-top: 20px;
-  text-transform: uppercase;
-}
-.experience a {
-  border: 2px solid #fff;
-  border-radius: 5px;
-  display: inline-block;
-  padding: 10px 20px;
-  color: #555;
-  margin-top: 20px;
-  text-transform: uppercase;
-}
 #content-area {
   margin: 200px 0px 60px;
 }
@@ -264,6 +210,18 @@ header .logo {
 }
 #content-area .content-pages {
   padding: 20px 0;
+}
+#section-sports {
+  background: #172031;
+  text-align: center;
+}
+#section-sports h3 {
+  color: #fff;
+  margin-bottom: 45px;
+}
+#section-sports h4 {
+  margin-top: 15px;
+  color: #fff;
 }
 #footer_area {
   background: #444;
